@@ -24,7 +24,7 @@
 #
 # For more information about the options, see the Guidebook.
 #
-# Edited on 4/08/18 by NullCGT
+# Edited on 4/09/18 by NullCGT
 #
 
 
@@ -34,8 +34,10 @@
 # Set your character's role, race, gender, and alignment
 #OPTIONS=role:Valkyrie, race:Human, gender:female, align:lawful
 
-# Set the default dog, cat, and horse names, and your fruit
+# Set the default dog, cat, bird, dragon, and horse names, and your fruit
+#OPTIONS=birdname:Polly
 #OPTIONS=dogname:Fido
+#OPTIONS=dragonname:Flame
 #OPTIONS=catname:Morris
 #OPTIONS=horsename:Silver
 #OPTIONS=fruit:guava
@@ -231,7 +233,7 @@
 
 # Specify the type of your initial pet, if you are playing a character class
 # that uses multiple types of pets; or choose to have no initial pet at all.
-# Possible values are "cat", "dog", "horse", and "none".
+# Possible values are "cat", "dog", "horse", "bird", and "none".
 #OPTIONS=pettype:cat
 
 # Threshold when item pile under you is shown in a popup list. Persistent.
