@@ -91,6 +91,9 @@ General Changes
   variant.
 - Pets can now potentially become stunned or invisible by eating the right
   kind of corpse.
+- Birds are now a potential kind of pet. You begin with a little bird, which can
+  grow up into a falcon and then into a giant falcon. They are balanced around
+  the existing pet options.
 
 Quest Nemesis Changes
 - Lord Surtur can create level-shaking earthquakes when he attacks.
